--- a/app/src/main/res/layout/fragment_schedule_edit.xml
+++ b/app/src/main/res/layout/fragment_schedule_edit.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleEdit" />
 
     <Button
-        android:id="@+id/dataButton"
+        android:id="@+id/dateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
